# aic-policy

./: .gitignore  pixi.toml  pixi_env_setup.sh  pytest.ini
doc/: task_board_policy.md  (+1 more)
ros_ws/src/aic_policy_ros/: package.xml  setup.py  vision
ros_ws/src/aic_policy_ros/aic_policy_ros/: __init__.py  ai_industry_challenge_seg_path.py  multiview_camera_extrinsics_tf.py  multiview_camera_info.py  multiview_snapshot.py  task_board_calibration_io.py  task_board_center_estimation.py  task_board_episode_geometry.py  task_board_insert_pose.py  task_board_rectangle_estimation.py  task_board_vision.py  wrist_extrinsics_testing_matrices.py
ros_ws/src/aic_policy_ros/aic_policy_ros/control/: __init__.py  cartesian_position_move.py  link_transform.py  task_board_center_move.py  task_board_control.py  task_preset_middle_pose_transform.py
ros_ws/src/aic_policy_ros/aic_policy_ros/ros/: TaskBoardPolicy.py  __init__.py
ros_ws/src/aic_policy_ros/config/: task_manifest.json
ros_ws/src/aic_policy_ros/tests/: test_task_board_insert_pose.py  test_task_board_policy_insert_cable.py
ros_ws/src/aic_policy_ros/tests/fixtures/episode_0/center_camera/extrinsics/: first_observation_extrinsics.json  intrinsics.json  second_observation_extrinsics.json
ros_ws/src/aic_policy_ros/tests/fixtures/episode_0/left_camera/extrinsics/: first_observation_extrinsics.json  intrinsics.json  second_observation_extrinsics.json
ros_ws/src/aic_policy_ros/tests/fixtures/episode_0/right_camera/extrinsics/: first_observation_extrinsics.json  intrinsics.json  second_observation_extrinsics.json
(+45 files in other folders)
